--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LightPay - Bill Payment App</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-$END$
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <i class="fas fa-bolt"></i> LightPay
+        </a>
+        <div class="navbar-nav ms-auto">
+            <span id="userWelcome" class="nav-text text-white me-3" style="display: none;"></span>
+            <button id="logoutBtn" class="btn btn-outline-light btn-sm" style="display: none;">
+                <i class="fas fa-sign-out-alt"></i> Logout
+            </button>
+            <button id="loginBtn" class="btn btn-outline-light btn-sm">
+                <i class="fas fa-sign-in-alt"></i> Login
+            </button>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-4">
+    <!-- Login/Register Section -->
+    <div id="authSection">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#" id="loginTab">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" id="registerTab">Register</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-body">
+                        <!-- Login Form -->
+                        <div id="loginForm">
+                            <form id="loginFormElement">
+                                <div class="mb-3">
+                                    <label for="loginEmail" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="loginEmail" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="loginPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="loginPassword" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100">
+                                    <i class="fas fa-sign-in-alt"></i> Login
+                                </button>
+                            </form>
+                        </div>
+
+                        <!-- Register Form -->
+                        <div id="registerForm" style="display: none;">
+                            <form id="registerFormElement">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="mb-3">
+                                            <label for="firstName" class="form-label">First Name</label>
+                                            <input type="text" class="form-control" id="firstName" required>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="mb-3">
+                                            <label for="lastName" class="form-label">Last Name</label>
+                                            <input type="text" class="form-control" id="lastName" required>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="registerEmail" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="registerEmail" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="registerPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="registerPassword" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="confirmPassword" class="form-label">Confirm Password</label>
+                                    <input type="password" class="form-control" id="confirmPassword" required>
+                                </div>
+                                <button type="submit" class="btn btn-success w-100">
+                                    <i class="fas fa-user-plus"></i> Register
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Dashboard Section -->
+    <div id="dashboardSection" style="display: none;">
+        <div class="row">
+            <!-- Sidebar -->
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Navigation</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-outline-primary btn-dashboard active" data-section="overview">
+                                <i class="fas fa-tachometer-alt"></i> Overview
+                            </button>
+                            <button class="btn btn-outline-primary btn-dashboard" data-section="bills">
+                                <i class="fas fa-file-invoice-dollar"></i> My Bills
+                            </button>
+                            <button class="btn btn-outline-primary btn-dashboard" data-section="payments">
+                                <i class="fas fa-credit-card"></i> Payments
+                            </button>
+                            <button class="btn btn-outline-primary btn-dashboard" data-section="profile">
+                                <i class="fas fa-user"></i> Profile
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Main Content -->
+            <div class="col-md-9">
+                <!-- Overview Section -->
+                <div id="overviewSection" class="dashboard-content">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Dashboard Overview</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card text-white bg-primary mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Pending Bills</h5>
+                                            <h2 id="pendingBillsCount">0</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card text-white bg-success mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Paid Bills</h5>
+                                            <h2 id="paidBillsCount">0</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card text-white bg-warning mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Total Spent</h5>
+                                            <h2 id="totalSpent">$0.00</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Bills Section -->
+                <div id="billsSection" class="dashboard-content" style="display: none;">
+                    <div class="card">
+                        <div class="card-header d-flex justify-content-between align-items-center">
+                            <h4>My Bills</h4>
+                            <button class="btn btn-primary btn-sm" id="addBillBtn">
+                                <i class="fas fa-plus"></i> Add Bill
+                            </button>
+                        </div>
+                        <div class="card-body">
+                            <div id="billsList">
+                                <!-- Bills will be loaded here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Payments Section -->
+                <div id="paymentsSection" class="dashboard-content" style="display: none;">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Payment History</h4>
+                        </div>
+                        <div class="card-body">
+                            <div id="paymentsList">
+                                <!-- Payments will be loaded here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Profile Section -->
+                <div id="profileSection" class="dashboard-content" style="display: none;">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>My Profile</h4>
+                        </div>
+                        <div class="card-body">
+                            <div id="profileInfo">
+                                <!-- Profile info will be loaded here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Add Bill Modal -->
+<div class="modal fade" id="addBillModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add New Bill</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addBillForm">
+                    <div class="mb-3">
+                        <label for="billAmount" class="form-label">Amount</label>
+                        <input type="number" class="form-control" id="billAmount" step="0.01" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="billDueDate" class="form-label">Due Date</label>
+                        <input type="date" class="form-control" id="billDueDate" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="billDescription" class="form-label">Description</label>
+                        <input type="text" class="form-control" id="billDescription" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="saveBillBtn">Save Bill</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap & jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Custom JavaScript -->
+<script src="js/auth.js"></script>
+<script src="js/bills.js"></script>
+<script src="js/payments.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
